--- a/angular.json
+++ b/angular.json
@@ -58,5 +58,8 @@
       }
     }
   },
-  "defaultProject": "proenca-supermercado"
+  "defaultProject": "proenca-supermercado",
+  "cli": {
+    "analytics": false
+  }
 }
