--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -58,5 +58,8 @@
       }
     }
   },
-  "defaultProject": "proenca-supermercado"
+  "defaultProject": "proenca-supermercado",
+  "cli": {
+    "analytics": false
+  }
 }
